--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>QR Scanner Pro</title>
     
     <!-- PWA Settings -->
-    <link rel="manifest" href="./assets/manifest-PKpxUocm.json" />
+    <link rel="manifest" href="./assets/manifest.json" />
     <meta name="theme-color" content="#020617" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
